# crispy_lg_agent

./: .gitignore  000_Basics.ipynb  001_Tool_calling_basics.ipynb  README.md  main.py  pyproject.toml  requirements.txt
