[project]
name = "crispy-lg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "asgiref>=3.11.0",
    "asttokens>=3.0.1",
    "attrs>=25.4.0",
    "authlib>=1.6.6",
    "backoff>=2.2.1",
    "bcrypt>=5.0.0",
    "beartype>=0.22.9",
    "beautifulsoup4>=4.14.3",
    "black>=25.12.0",
    "bleach>=6.3.0",
    "build>=1.4.0",
    "cachetools>=6.2.4",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "chroma-hnswlib>=0.7.6",
    "chromadb>=1.4.0",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "comm>=0.2.3",
    "cryptography>=46.0.3",
    "cyclopts>=4.4.4",
    "dataclasses-json>=0.6.7",
    "debugpy>=1.8.19",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "deprecated>=1.3.1",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "dnspython>=2.8.0",
    "docstring-parser>=0.17.0",
    "docutils>=0.22.4",
    "durationpy>=0.10",
    "email-validator>=2.3.0",
    "exceptiongroup>=1.3.1",
    "executing>=2.2.1",
    "fastapi>=0.128.0",
    "fastjsonschema>=2.21.2",
    "fastmcp>=2.14.3",
    "filelock>=3.20.3",
    "flatbuffers>=25.12.19",
    "frozenlist>=1.8.0",
    "fsspec>=2026.1.0",
    "git-filter-repo>=2.47.0",
    "google-auth>=2.47.0",
    "googleapis-common-protos>=1.72.0",
    "greenlet>=3.3.0",
    "grpcio>=1.76.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface-hub>=1.3.1",
    "humanfriendly>=10.0",
    "idna>=3.11",
    "importlib-metadata>=8.7.1",
    "importlib-resources>=6.5.2",
    "iniconfig>=2.3.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "ipython-pygments-lexers>=1.1.1",
    "isodate>=0.7.2",
    "isort>=7.0.0",
    "jaraco-classes>=3.4.0",
    "jaraco-context>=6.1.0",
    "jaraco-functools>=4.4.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.12.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.26.0",
    "jsonschema-path>=0.3.4",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "jupyterlab-pygments>=0.3.0",
    "keyring>=25.7.0",
    "kubernetes>=34.1.0",
    "langchain>=1.2.3",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint-sqlite>=3.0.2",
    "langgraph-prebuilt>=1.0.6",
    "langgraph-sdk>=0.3.3",
    "langsmith>=0.6.2",
    "lazy-object-proxy>=1.12.0",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "marshmallow>=3.26.2",
    "matplotlib-inline>=0.2.1",
    "mcp>=1.25.0",
    "mdurl>=0.1.2",
    "mistune>=3.2.0",
    "mmh3>=5.2.0",
    "monotonic>=1.6",
    "more-itertools>=10.8.0",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "multidict>=6.7.0",
    "mypy>=1.19.1",
    "mypy-extensions>=1.1.0",
    "nbclient>=0.10.4",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.1",
    "oauthlib>=3.3.1",
    "onnxruntime>=1.23.2",
    "openai>=2.15.0",
    "openapi-core>=0.22.0",
    "openapi-pydantic>=0.5.1",
    "openapi-schema-validator>=0.6.3",
    "openapi-spec-validator>=0.7.2",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-common>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-instrumentation-asgi>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-proto>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-semantic-conventions>=0.60b1",
    "opentelemetry-util-http>=0.60b1",
    "orjson>=3.11.5",
    "ormsgpack>=1.12.1",
    "overrides>=7.7.0",
    "packaging>=25.0",
    "pandocfilters>=1.5.1",
    "parse>=1.20.2",
    "parso>=0.8.5",
    "pathable>=0.4.4",
    "pathspec>=1.0.3",
    "pathvalidate>=3.3.1",
    "platformdirs>=4.5.1",
    "pluggy>=1.6.0",
    "posthog>=5.4.0",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.4.1",
    "protobuf>=6.33.4",
    "psutil>=7.2.1",
    "psycopg>=3.3.2",
    "psycopg-pool>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pure-eval>=0.2.3",
    "py-key-value-aio>=0.3.0",
    "py-key-value-shared>=0.3.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pybase64>=1.4.3",
    "pycparser>=2.23",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pygments>=2.19.2",
    "pyperclip>=1.11.0",
    "pypika>=0.48.9",
    "pyproject-hooks>=1.2.0",
    "pyreadline3>=3.5.4 ; sys_platform == 'win32'",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pytokens>=0.3.0",
    "pywin32==311 ; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3 ; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "referencing>=0.36.2",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "rfc3339-validator>=0.1.4",
    "rich>=14.2.0",
    "rich-rst>=1.3.2",
    "rpds-py>=0.30.0",
    "rsa>=4.9.1",
    "ruff>=0.14.11",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.1",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "sqlite-vec>=0.1.6",
    "sse-starlette>=3.1.2",
    "stack-data>=0.6.3",
    "starlette>=0.50.0",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "tinycss2>=1.4.0",
    "tokenizers>=0.22.2",
    "tornado>=6.5.4",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typer>=0.21.1",
    "typing-extensions>=4.15.0",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.3",
    "urllib3>=2.3.0",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "wcwidth>=0.2.14",
    "webencodings>=0.5.1",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
    "werkzeug>=3.1.5",
    "wrapt>=1.17.3",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
    "zipp>=3.23.0",
    "zstandard>=0.25.0",
]
